# poly_approx

./: README.md  extrapolator.py  number_wall.py  poly_approx.py  pyproject.toml  setup.cfg
.github/workflows/: validate.yml
poly_approx/: __init__.py  poly_approx.py
test/: test_integrate-differentiate.py  test_main.py  test_reduce.py  test_rlc.py
