[metadata]
name = poly-approx
version = 0.0.1
url = https://github.com/trundev/poly_approx
author = Todor Trundev
author_email = trundev@gmail.com
classifiers =
    Environment :: Console
    Topic :: Scientific/Engineering :: Signal Processing
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT License
description = Simple polynomial approximation for digital signals
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = .
package_dir =
    =src
python_requires = >=3.7

[tool:pytest]
pythonpath=src
